--- a/Week6_A106260093_王緯華.ipynb
+++ b/Week6_A106260093_王緯華.ipynb
@@ -26,42 +26,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4KQa5sIUHBbM",
+        "id": "1cHrzbHigu1_",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 51
         },
-        "outputId": "52b3208f-3c8d-4ff4-8dea-8e8deb131fe1"
+        "outputId": "2ee6fb69-9766-4f25-a743-234a1c9f2bbf"
       },
       "source": [
-        "#1. 變數初始化為分鐘數\n",
-        "minutes_to_convert = 555\n",
+        "幾罐=float(input('輸入購買飲料的罐數'))\n",
+        "幾打=幾罐/12\n",
+        "剩餘=int(幾打)\n",
+        "幾打的價格=(幾打-剩餘)*200 #2.5-2 \n",
         "\n",
-        "# 2. 變數轉換為小時數\n",
-        "hours_decimal = minutes_to_convert/60 #數學運算除以60\n",
-        "hours_part = int(hours_decimal) #將浮點數結果轉換變數型別為整數\n",
+        "剩餘的價格=剩餘*200\n",
         "\n",
-        "# 3. 取得轉換後的分鐘數\n",
-        "minutes_decimal = hours_decimal-hours_part #浮點數減整數取得小數\n",
-        "minutes_part = round(minutes_decimal*60) #數學運算乘60得分鐘數，在此要四捨五入才行\n",
-        "\n",
-        "# 4. 顯示結果\n",
-        "\n",
-        "print(\"Hours\")\n",
-        "print(hours_part)\n",
-        "print(\"Minutes\")\n",
-        "print(minutes_part)"
+        "總共=幾打的價格+剩餘的價格\n",
+        "print('需花費',總共)"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hours\n",
-            "9\n",
-            "Minutes\n",
-            "15\n"
+            "輸入購買飲料的罐數30\n",
+            "需花費 500.0\n"
           ],
           "name": "stdout"
         }
@@ -70,43 +60,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EMt_e2AlMAhB",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d7fbf02a-65c0-434a-97a9-ed8b3f5a4b4a"
-      },
-      "source": [
-        "123//60"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "f3u-9jw7MJoJ",
+        "id": "sxBuJwPKiAlW",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "a6956d22-ce7d-4fd2-bf7e-1ddb5f2d57a8"
+        "outputId": "7e1c3e02-a9e8-454f-8903-540e2a3bbeda"
       },
       "source": [
         "第一次=int(input(\"第一次期中考成績為?\"))\n",
@@ -117,16 +77,16 @@
         "\n",
         "總分 = 第一次*1+第二次*1+第三次*1\n",
         "平均 = 總分/3\n",
-        "print(\"總分為\",總分,\"平均為\",平均)\n"
+        "print(\"總分為\",總分,\"平均為\",平均)"
       ],
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "第一次期中考成績為?75\n",
-            "第二次期中考成績為?80\n",
-            "期末考成績為?65\n",
+            "第二次期中考成績為?65\n",
+            "期末考成績為?80\n",
             "總分為 220 平均為 73.33333333333333\n"
           ],
           "name": "stdout"
@@ -136,13 +96,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PCC7iy_8Sn1Z",
+        "id": "75BzfPe6iTSO",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "44f0a269-6fc0-4a62-92c5-8dc6b9049995"
+        "outputId": "3ade26d8-b1ea-4581-92dd-91a4e5971343"
       },
       "source": [
         "第一次=int(input(\"請輸入幾尺?\"))\n",
@@ -153,7 +113,7 @@
         "轉換公式 = (第一次*12+第二次*1)*2.54\n",
         "print(\"轉換成\",轉換公式,\"公分\")"
       ],
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,13 +129,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZErnxHj5Tt2d",
+        "id": "_qv8P33fiZxr",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "61a51f9a-c5ae-4d7d-c7e8-f3f2daff0f54"
+        "outputId": "5ddf8054-07f2-47e7-cd5e-48b8e35c8fe6"
       },
       "source": [
         "座號=int(input(\"輸入座號\"))\n",
@@ -185,9 +145,9 @@
         "分組為=int(四捨五入)\n",
         "\n",
         "print(\"分組\")\n",
-        "print(分組為)"
+        "print(分組為)\n"
       ],
-      "execution_count": 43,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,58 +160,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xJSnJCqjWgIe",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "bc452e9a-bd3b-4a33-f29f-82f107964bd9"
-      },
-      "source": [
-        "幾罐=int(input(\"要買幾罐?\"))\n",
-        "print(\"計算結果顯示如下\")\n",
-        "print(\"您購買了\",幾罐,\"罐\")\n",
-        "一打=幾罐/12\n",
-        "打數=int(一打)\n",
-        "\n",
-        "餘罐=一打-打數\n",
-        "餘罐捨入=round(餘罐*20)\n",
-        "\n",
-        "總金額=打數*200+餘罐捨入*10\n",
-        "\n",
-        "print(\"需花費\",總金額)\n"
-      ],
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "要買幾罐?30\n",
-            "計算結果顯示如下\n",
-            "您購買了 30 罐\n",
-            "需花費 500\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dowcPs4NYv15",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
