--- a/Week15_A106260093_王緯華.ipynb
+++ b/Week15_A106260093_王緯華.ipynb
@@ -29,10 +29,9 @@
         "id": "F7HSR7Vxlzfw",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31e0c00b-877e-4ecc-b950-6c5b3f41f738"
+        "outputId": "5629137a-4505-4019-d591-b007f815327a"
       },
       "source": [
         "x=5\n",
@@ -41,7 +40,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +60,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "1c5b9c4e-6210-4c8b-dd5a-a69842002a1f"
+        "outputId": "da887deb-12c4-4743-b492-c08b8cdaf58b"
       },
       "source": [
         "x=5 #\n",
@@ -71,7 +70,7 @@
         "  x = x+1 #update \n",
         "print(\"Finshed\")"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,10 +97,9 @@
         "id": "Ul2Daf3CmOfZ",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edd68f0b-5076-4829-e9e6-28f19175d23d"
+        "outputId": "3fffcf96-69e7-40ed-bbed-6040cd620519"
       },
       "source": [
         "#most importan\n",
@@ -111,7 +109,7 @@
         "  x=x+1\n",
         "print(\"Fineshed\")\n"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,10 +130,9 @@
         "id": "XV3L3HXmqW6-",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5876cb54-d5d6-4529-84ac-707161beb518"
+        "outputId": "5d60fbad-16fd-4a75-c991-bd7961825ee4"
       },
       "source": [
         "x = 1\n",
@@ -144,7 +141,7 @@
         "  x=x+1\n",
         "print(\"Fineshed\")\n"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +171,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "114c42a3-cedb-45ae-f915-8fe991e91b62"
+        "outputId": "a92cfd51-1f60-4772-9e42-045234a1e4be"
       },
       "source": [
         "x = 1\n",
@@ -183,7 +180,7 @@
         "  x=x+1\n",
         "print(\"Fineshed\")"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +210,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "e2efc073-fda5-458d-845e-b6d9252c0471"
+        "outputId": "d54f6df3-a0f8-46e9-e301-d96b0be14b25"
       },
       "source": [
         "x = 0\n",
@@ -224,7 +221,7 @@
         "  print(\"this is \",x,\" times Hello\",\"you still have\",left,\"times\")\n",
         "print(\"Fineshed\")"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,10 +248,9 @@
         "id": "yjISl9WNtBc8",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93235cce-1afe-4308-b5ea-b3a7d566e3ca"
+        "outputId": "713cbdb4-fc80-4576-c930-3075aaa2d622"
       },
       "source": [
         "x = 0\n",
@@ -266,7 +262,7 @@
         "  print(\"Sum is\",sum)\n",
         "print(\"Fineshed\")"
       ],
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +292,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 374
         },
-        "outputId": "7dad215b-4369-4e98-ca92-885d302d4743"
+        "outputId": "e026fee5-8368-444a-979d-cf717b8c3adc"
       },
       "source": [
         "x = 0\n",
@@ -310,7 +306,7 @@
         "\n",
         "print(\"Fineshed\")"
       ],
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +346,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9bda02b9-70e1-42ca-f3a1-d9aa957ddb97"
+        "outputId": "21035fd9-677f-4ce8-f83d-ed7d14721a73"
       },
       "source": [
         "sum=0\n",
@@ -361,7 +357,7 @@
         "  x=x+2\n",
         "print(\"1+3+5+7+9=\",sum)\n"
       ],
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +377,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "410fa0a9-8bf5-4a85-f3a9-61b7397bd013"
+        "outputId": "cd53aee7-549f-4c53-b24b-20a70f54e34b"
       },
       "source": [
         "sum =0\n",
@@ -392,12 +388,80 @@
         "  sum=sum + x*x\n",
         "print(\"最小的N值為\",x)"
       ],
-      "execution_count": 43,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "最小的N值為 14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lgdWQzKG24nD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "64289359-3d18-416a-cb37-c8567e51c151"
+      },
+      "source": [
+        "i = 1\n",
+        "while (i < 6):\n",
+        "  print(i)\n",
+        "  if i == 3:\n",
+        "   break\n",
+        "  i += 1"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OnS9dNaA3STE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "4db5279a-fa2e-4cda-f2ef-6a3087846af9"
+      },
+      "source": [
+        "i = 1\n",
+        "while (i<6):\n",
+        "  print(i)\n",
+        "  if i == 6:\n",
+        "   break\n",
+        "  i += 1\n",
+        "print('while迴圈正常結束')"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "while迴圈正常結束\n"
           ],
           "name": "stdout"
         }
